/*
 * $Id: ChangeLog,v 1.363 2007-06-09 22:59:27 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-06-09 17:54 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_toolbar.prg
    ! Fixed for not allow ALT-x accelerator on disabled buttons.
  * source/h_windows.prg
    + TWindow:Style SETGET method added.
  * source/h_textarray.prg
  * include/i_textarray.ch
    + NOTABSTOP and DISABLED clauses added.

2007-06-09 14:03 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
   * source/h_print.prg
     ! fixing prblems with ::lmargin() and ::tmargin() in Excel, RTF, HTML and CSV

2007-06-07 8:37 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
    ! adjunsting fonts in PDF, it's posible print with arial, helvetica, times new roman and courier new
      fonts, with other fonts, courier new is selected by default.

2007-06-05 19:34 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    ! Fixed for set focus to any control on first's window ::Show()

2007-05-30 13:02 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
   * source/h_print.prg
    ! moved process to another method because extrange results.

2007-05-29 14:43 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/c_winapimisc.c
  * source/miniprint.prg
    ! fixed dup functions with xharbour and Mingw

2007-05-27 17:28 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_pdf.prg
    * Fixed PDF creation when trying to draw an inexistent image file.

2007-05-22 23:13 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
    ! Removed warnings.

2007-05-22 11:35 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/miniprint.prg
     ! fixed to avoid Dup fuction getdefaultprinter in xharbour mingw.
