@@ -1,5 +1,5 @@
 /*
- * $Id: c_media.c,v 1.2 2007-01-01 20:52:13 guerra000 Exp $
+ * $Id: c_media.c,v 1.3 2007-06-25 04:35:57 guerra000 Exp $
  */
 /*
  * ooHG source code:
@@ -159,130 +159,3 @@ HB_FUNC (STOPWAVE)
 {
         hb_retl(PlaySound( (LPCSTR) NULL , (HMODULE) GetModuleHandle(NULL) , SND_PURGE ) ) ;
 }
-
-#if !defined(__MINGW32__ )
-
-#include <vfw.h>
-
-HB_FUNC ( INITPLAYER )
-{
-	HWND hwnd;
-	int Style = WS_VISIBLE | WS_CHILD | WS_BORDER	;
-
-	if (  hb_parl (7) )
-		Style = Style | MCIWNDF_NOAUTOSIZEWINDOW ;
-	if (  hb_parl (8) )
-		Style = Style | MCIWNDF_NOAUTOSIZEMOVIE ;
-	if (  hb_parl (9) )
-		Style = Style | MCIWNDF_NOERRORDLG ;
-	if (  hb_parl (10) )
-		Style = Style | MCIWNDF_NOMENU ;
-	if (  hb_parl (11) )
-		Style = Style | MCIWNDF_NOOPEN ;
-	if (  hb_parl (12) )
-		Style = Style | MCIWNDF_NOPLAYBAR ;
-	if (  hb_parl (13) )
-		Style = Style | MCIWNDF_SHOWALL ;
-	if (  hb_parl (14) )
-		Style = Style | MCIWNDF_SHOWMODE ;
-	if (  hb_parl (15) )
-		Style = Style | MCIWNDF_SHOWNAME ;
-	if (  hb_parl (16) )
-		Style = Style | MCIWNDF_SHOWPOS ;
-
-        hwnd=MCIWndCreate( HWNDparam( 1 ),NULL,Style,hb_parc(2));
-
-	if(hwnd == NULL)
-	{
-	MessageBox(0, "Player Creation Failed!", "Error!",
-	MB_ICONEXCLAMATION | MB_OK | MB_SYSTEMMODAL);
-	return;
-	}
-        MoveWindow(hwnd,hb_parnl(3),hb_parnl(4),hb_parnl(5),hb_parnl(6),TRUE);
-        HWNDret( hwnd );
-}
-
-HB_FUNC (MCIFUNC)
-{
-   HWND mcihand = HWNDparam( 1 );
-   int  func =  hb_parni(2);
-      switch(func)
-      {
-         case  1:  hb_retnl( MCIWndPlay(mcihand)) ; break;
-         case  2:  hb_retnl( MCIWndStop(mcihand)) ; break;
-         case  3:  hb_retnl( MCIWndPause(mcihand)) ; break;
-         case  4:  hb_retnl( MCIWndClose(mcihand)) ; break;
-         case  5:            MCIWndDestroy(mcihand) ; hb_retnl(0);break;
-         case  6:  hb_retnl( MCIWndEject(mcihand)) ; break;
-         case  7:  hb_retnl( MCIWndEnd(mcihand)) ; break;
-         case  8:  hb_retnl( MCIWndHome(mcihand)) ; break;
-         case  9:  hb_retnl( MCIWndOpen(mcihand,hb_parc(3),NULL)) ; break;
-         case 10:  hb_retnl( MCIWndOpenDialog(mcihand)) ; break;
-         case 11:  hb_retnl( MCIWndPlayReverse(mcihand)) ; break;
-         case 12:  hb_retnl( MCIWndResume(mcihand)) ; break;
-         case 13:            MCIWndSetRepeat(mcihand,hb_parl(3)) ;hb_retnl(0); break;
-         case 14:  hb_retnl( MCIWndSetSpeed(mcihand,hb_parni(3))) ; break;
-         case 15:  hb_retnl( MCIWndSetVolume(mcihand,hb_parni(3))) ; break;
-         case 16:            MCIWndSetZoom(mcihand,hb_parni(3)) ; hb_retnl(0); break;
-         case 17:  hb_retnl( MCIWndGetLength(mcihand)) ; break;
-         case 18:  hb_retnl( MCIWndGetPosition(mcihand)) ; break;
-         case 19:  hb_retnl( MCIWndGetVolume(mcihand) ) ; break;
-         case 20:  hb_retnl( MCIWndSeek(mcihand,hb_parni(3)) ) ; hb_retnl(0); break;
-         default: hb_retnl( 0 ) ;
-      }
-}
-
-HB_FUNC ( INITANIMATE )
-{
-	HWND hwnd;
-	int Style = WS_VISIBLE | WS_CHILD | WS_BORDER;
-
-	if (  hb_parl (6) )
-		Style = Style | ACS_AUTOPLAY ;
-	if (  hb_parl (7) )
-		Style = Style | ACS_CENTER ;
-	if (  hb_parl (8) )
-		Style = Style | ACS_TRANSPARENT ;
-
-        hwnd=Animate_Create( HWNDparam( 1 ),NULL,Style,GetModuleHandle(NULL));
-
-	if(hwnd == NULL)
-	{
-	MessageBox(0, "AnimateBox Creation Failed!", "Error!",
-	MB_ICONEXCLAMATION | MB_OK | MB_SYSTEMMODAL);
-	return;
-	}
-        MoveWindow(hwnd,hb_parnl(2),hb_parnl(3),hb_parnl(4),hb_parnl(5),TRUE);
-        HWNDret( hwnd );
-}
-
-HB_FUNC ( OPENANIMATE )
-{
-  Animate_Open( HWNDparam( 1 ), hb_parc(2));
-}
-
-HB_FUNC ( PLAYANIMATE )
-{
-  Animate_Play( HWNDparam( 1 ), 0, -1, 1 );
-}
-
-HB_FUNC ( SEEKANIMATE )
-{
-  Animate_Seek( HWNDparam( 1 ), hb_parni(2));
-}
-
-HB_FUNC ( STOPANIMATE )
-{
-  Animate_Stop( HWNDparam( 1 ) );
-}
-
-HB_FUNC ( CLOSEANIMATE )
-{
-  Animate_Close( HWNDparam( 1 ) );
-}
-
-HB_FUNC ( DESTROYANIMATE )
-{
-  DestroyWindow( HWNDparam( 1 ) );
-}
-#endif
