@@ -1,11 +1,19 @@
 /*
- * $Id: ChangeLog,v 1.363 2007-06-09 22:59:27 guerra000 Exp $
+ * $Id: ChangeLog,v 1.364 2007-06-25 04:35:56 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-06-24 23:36 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * include/i_altsyntax.ch
+  * include/i_media.ch
+  * include/i_windefs.ch
+  * source/c_media.c
+  * source/h_media.prg
+    * Some ooHG-style implementations for TPlayer and TAnimateBox controls.
 
 2007-06-09 17:54 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_toolbar.prg
